# AMDB

./: .envrc.example  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  .pydocstyle.ini  Makefile  README.md  celery.sh  manage.py  pyproject.toml  pytest.ini  uwsgi.sh  version.txt
apps/openstacks/: apps.py  exceptions.py  resouces.py  tasks.py  urls.py
apps/openstacks/migrations/: 0001_initial.py  0002_alter_rulesmodel_remote_ip_prefix.py  0003_auto_20240704_1411.py  0004_auto_20240711_1028.py
apps/openstacks/models/: __init__.py  base.py  flavors.py  images.py  networks.py  records.py  security_groups.py  servers.py  volumes.py
apps/openstacks/serializers/: base.py  flavors.py  images.py  networks.py  security_groups.py  servers.py  volumes.py
apps/openstacks/services/: base.py  flavors.py  images.py  networks.py  security_groups.py  servers.py  volumes.py
apps/openstacks/views/: __init__.py  base.py  flavors.py  images.py  openstack_mgmt.py  ports.py  security_groups.py  servers.py  volumes.py
libs/: health.py  mixins.py  renderers.py
libs/base/: exceptions.py  fields.py  filters.py  middleware.py  models.py  permissions.py  serializers.py
libs/celery/: scheduler.py
libs/celery/docs/: generators.py
libs/resources/: format.py  resource.py  widget.py
libs/terraform/: base.py  create.py  delete.py  log.py
libs/terraform/conf/customip/: main.tf  terraform_example.tfvars.json
libs/terraform/conf/dhcp/: main.tf  terraform_example.tfvars.json
libs/util/: aes_cbc.py  string_util.py  tool.py
main/: __init__.py  celery.py  config.default.yml  docs.py  settings.py  urls.py  uwsgi.daemonize.ini  uwsgi.default.ini
templates/email/: import.html
